--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <div id="root"></div>
     <div id="modal-hook"></div>
+    <div id="backdrop-hook"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
